--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,10 +23,6 @@ h5 {
     padding-top: 50px;
 }
 
-
-
-
-
 /* Styles for the civil handlebar */
 .background-image-civil {
   background-image: url(https://cdn.pixabay.com/photo/2016/07/11/11/10/law-1509436_1280.jpg);
@@ -114,6 +110,9 @@ h5 {
 h2 {
   color: #7ec8e3;
 }
+
+/* Styles for the contact form html */
+
 
 /* Styles for the footer handlebar */
 footer {
