--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,9 +14,7 @@ h4 {
   color: #7ec8e3;
 }
 
-main {
-  border-bottom: solid #274472;
-}
+
 
 /* Style for the header navbar */
 .container-fluid {
@@ -41,6 +39,7 @@ main {
 
 .redirected-to-publications {
   margin-bottom: 1.5%;
+  border-top: solid #274472;
 }
 
 .first-header {
@@ -76,7 +75,7 @@ main {
   background-image: url(https://cdn.pixabay.com/photo/2017/08/06/22/24/justitia-2597016_1280.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  padding-bottom: 25%;
+  padding-bottom: 20%;
 }
 
 .second-main-section {
@@ -86,7 +85,6 @@ main {
 
 .services-section {
   border-top: solid #274472;
-  border-bottom: solid #274472;
 }
 
 .welcome-cards {
@@ -105,7 +103,7 @@ main {
   background-image: url(https://cdn.pixabay.com/photo/2016/07/11/11/10/law-1509436_1280.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  padding-bottom: 25%;
+  padding-bottom: 20%;
 }
 
 /* Styles for familiar html */
@@ -113,7 +111,7 @@ main {
   background-image: url(https://cdn.pixabay.com/photo/2013/07/09/01/50/court-144090_1280.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  padding-bottom: 25%;
+  padding-bottom: 20%;
 }
 
 /* Styles for penal html */
@@ -121,7 +119,7 @@ main {
   background-image: url(https://cdn.pixabay.com/photo/2016/08/11/23/54/judge-1587300_1280.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  padding-bottom: 25%;
+  padding-bottom: 20%;
 }
 
 /* Styles for publiacaciones html */
@@ -129,7 +127,7 @@ main {
   background-image: url(https://cdn.pixabay.com/photo/2016/03/09/09/14/books-1245690_1280.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  padding-bottom: 25%;
+  padding-bottom: 20%;
 }
 
 .publications-section-one {
