--- a/public/css/style.css
+++ b/public/css/style.css
@@ -67,6 +67,9 @@ h4 {
   width: 300px;
 }
 
+/* Portrait styles */
+
+
 /* Welcome html styles */
 .background-image {
   background-image: url(https://cdn.pixabay.com/photo/2017/08/06/22/24/justitia-2597016_1280.jpg);
@@ -118,7 +121,7 @@ h4 {
 
 /* Styles for penal html */
 .background-image-penal {
-  background-image: url(https://cdn.pixabay.com/photo/2016/08/11/23/54/judge-1587300_1280.jpg);
+  background-image: url(https://cdn.pixabay.com/photo/2013/11/27/14/38/prison-fence-219264_1280.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   padding-bottom: 20%;
