--- a/public/css/style.css
+++ b/public/css/style.css
@@ -83,6 +83,10 @@ h4 {
   margin-bottom: 1.5%;
 }
 
+.information-header {
+  border-top: solid #274472;
+}
+
 .services-section {
   border-top: solid #274472;
 }
