--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,7 @@
 
 /* Universal styles */
 * {
-  font-family: serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 h1,
@@ -12,6 +12,10 @@ h2, h3, h5 {
 
 h4 {
   color: #7ec8e3;
+}
+
+.card-text {
+  font-size: 1.5rem;
 }
 
 /* Style for the header navbar */
