--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,13 +5,20 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
-h1,
+h1
+ {
+  color: #000c66;
+  font-size: 3rem;
+}
+
 h2, h3, h5 {
   color: #000c66;
+  font-size: 2rem;
 }
 
 h4 {
   color: #7ec8e3;
+  font-size: 2rem;
 }
 
 .card-text {
